--- a/package.json
+++ b/package.json
@@ -1,46 +1,35 @@
 {
-  "name": "muddy-cell-0ada",
-  "description": "A template for building a React application with Vite, Hono, and Cloudflare Workers",
+  "name": "vite-react-typescript-starter",
+  "private": true,
   "version": "0.0.0",
-  "cloudflare": {
-    "label": "Vite React Template",
-    "products": [
-      "Workers"
-    ],
-    "categories": [],
-    "icon_urls": [
-      "https://imagedelivery.net/wSMYJvS3Xw-n339CbDyDIA/5ca0ca32-e897-4699-d4c1-6b680512f000/public"
-    ],
-    "preview_image_url": "https://imagedelivery.net/wSMYJvS3Xw-n339CbDyDIA/fc7b4b62-442b-4769-641b-ad4422d74300/public",
-    "dash": true
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "hono": "4.7.5",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "@google-ai/generativelanguage": "^1.1.0",
+    "google-auth-library": "^9.0.0",
+    "lucide-react": "^0.344.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@cloudflare/vite-plugin": "1.0.0",
-    "@eslint/js": "9.23.0",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4",
-    "@vitejs/plugin-react": "4.3.4",
-    "eslint": "9.23.0",
-    "eslint-plugin-react-hooks": "5.2.0",
-    "eslint-plugin-react-refresh": "0.4.19",
-    "globals": "15.15.0",
-    "typescript": "5.8.2",
-    "typescript-eslint": "8.29.0",
-    "vite": "6.2.5",
-    "wrangler": "4.7.0"
-  },
-  "scripts": {
-    "build": "tsc -b && vite build",
-    "deploy": "npm run build && wrangler deploy",
-    "dev": "vite",
-    "lint": "eslint .",
-    "preview": "npm run build && vite preview",
-    "types": "wrangler types"
-  },
-  "type": "module"
+    "@eslint/js": "^9.9.1",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "globals": "^15.9.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.3.0",
+    "vite": "^5.4.2"
+  }
 }
